--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username: janez87
 # site urls
 # add the url for the domain,
 # on gh-pages follow the pattern: https://username.github.io 
-url: https://evanwill.github.io
+url: https://janez87.github.io/empathiCH/
 # add subsection of the domain,
 # on gh-pages this is a / followed by the name of the repository
 baseurl: /workshop-template
