--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ pub_year: 2021
 github_username: janez87
 
 # add the full url for the github repository
-#repo: "https://github.com/evanwill/workshop-template"
+repo: "https://github.com/evanwill/workshop-template"
 
 # site urls
 # add the url for the domain,
 # on gh-pages follow the pattern: https://username.github.io 
-url: https://janez87.github.io/
+url: https://janez87.github.io
 # add subsection of the domain,
 # on gh-pages this is a / followed by the name of the repository
 baseurl: /empathiCH/
